# swipe-persona

./: .gitignore  CLAUDE.md  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  deploy-pages.yml  gemini-review.yml
analysis/: bayes_irt.py  pyproject.toml
analysis/scripts/: README.md  _api_client.py  generate_questions.py  generate_targeted_questions.py  update_persona.py  validate_questions.py
analysis/tests/: test_bayes_irt.py
data/axes/: axes.yaml
data/questions/: questions.json
data/questions/fragments/: group1.json  group2.json  group3.json  layer2_group1.json  layer2_group2.json  layer2_group3.json  layer2_group4.json  layer2_group5.json  targeted_from_analysis.json
frontend/: .env.production  package-lock.json  package.json  vite.config.ts
frontend/public/: questions-sample.json
frontend/src/: App.tsx  auth.ts  index.css  types.ts
frontend/src/components/: AuthGate.tsx  SwipeCard.tsx
frontend/src/hooks/: useSwipeSession.ts
persona/: yushin.md
worker/: package-lock.json  package.json  tsconfig.json  wrangler.jsonc
worker/migrations/: 0001_init.sql
worker/src/: index.ts
worker/src/lib/: d1-wrapper.ts
